; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_commit_stack_pop.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_commit_stack_pop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit = type { i32 }
%struct.commit_stack = type { i32, %struct.commit** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.commit* (%struct.commit_stack*)* @commit_stack_pop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.commit* @commit_stack_pop(%struct.commit_stack* %0) #0 {
  %2 = alloca %struct.commit_stack*, align 8
  store %struct.commit_stack* %0, %struct.commit_stack** %2, align 8
  %3 = load %struct.commit_stack*, %struct.commit_stack** %2, align 8
  %4 = getelementptr inbounds %struct.commit_stack, %struct.commit_stack* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.commit_stack*, %struct.commit_stack** %2, align 8
  %9 = getelementptr inbounds %struct.commit_stack, %struct.commit_stack* %8, i32 0, i32 1
  %10 = load %struct.commit**, %struct.commit*** %9, align 8
  %11 = load %struct.commit_stack*, %struct.commit_stack** %2, align 8
  %12 = getelementptr inbounds %struct.commit_stack, %struct.commit_stack* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = add nsw i32 %13, -1
  store i32 %14, i32* %12, align 8
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.commit*, %struct.commit** %10, i64 %15
  %17 = load %struct.commit*, %struct.commit** %16, align 8
  br label %19

18:                                               ; preds = %1
  br label %19

19:                                               ; preds = %18, %7
  %20 = phi %struct.commit* [ %17, %7 ], [ null, %18 ]
  ret %struct.commit* %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
